--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.7.7"
+
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
 
     // Import the BoM for the Firebase platform
