--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ android {
 }
 
 dependencies {
+    implementation "com.github.JamalMulla:ComposePrefs3:1.0.5" // Current is 1.0.5
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
     def nav_version = "2.7.7"
 
     implementation "androidx.navigation:navigation-compose:$nav_version"
