--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ android {
 dependencies {
     implementation "com.github.JamalMulla:ComposePrefs3:1.0.5" // Current is 1.0.5
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation libs.firebase.ml.modeldownloader.ktx
 
     def nav_version = "2.7.7"
 
